--- a/src/templates/get_data/home.html
+++ b/src/templates/get_data/home.html
@@ -1,36 +1,10 @@
-<!doctype html>
+{% extends "get_data/base.html" %}
 
-<html lang="en">
-<head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+{%block title%}Home{%endblock%}
 
-  <title>A Basic HTML5 Template</title>
-  <meta name="description" content="A simple HTML5 Template for new projects.">
-  <meta name="author" content="SitePoint">
-
-  <meta property="og:title" content="A Basic HTML5 Template">
-  <meta property="og:type" content="website">
-  <meta property="og:url" content="https://www.sitepoint.com/a-basic-html5-template/">
-  <meta property="og:description" content="A simple HTML5 Template for new projects.">
-  <meta property="og:image" content="image.png">
-
-  <link rel="icon" href="/favicon.ico">
-  <link rel="icon" href="/favicon.svg" type="image/svg+xml">
-  <link rel="apple-touch-icon" href="/apple-touch-icon.png">
-
-  <link rel="stylesheet" href="css/styles.css?v=1.0">
-
-</head>
-
-<body>
-  <!-- your content here... -->
-  <h2>Hello!!!</h2>
+{%block content%}
   {% for object in object_list %}
-    <p>{{object}} </p>
+    <a href="{{object.url}}"><p>{{object}} </p></a>
+    <p>{{object.description}}</p>
   {% endfor %}
-  <h3>My content here</h3>
-  <p>{{object_list}}</p>
-  <script src="js/scripts.js"></script>
-</body>
-</html>
+{%endblock%}
