add custom accounts

--- a/src/templates/get_data/home.html
+++ b/src/templates/get_data/home.html
@@ -9,6 +9,7 @@
                 <h5><a href="{{object.url}}">{{object.title}}</a></h5>
             </div>
             <div class="card-body">
+                <h6 class="card-title">{{object.company}}</h6>
                 <p class="card-text">{{object.description}}</p>
                 <p>{{object.city.name}} | {{object.program_language.name}} | {{object.timestamp|date:"d/m/y"}}</p>
             </div>
